Cambio de cabecera

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Prueba</title>
 </head>
 <body>
-    
+    <h1>Prueba número 1</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio voluptas natus, aliquam eius facilis temporibus nulla corrupti at a, saepe unde cupiditate quos. Voluptates incidunt magni suscipit laudantium ad delectus?</p>
 </body>
 </html>
