Este es el bueno

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Prueba número 1</h1>
     <h2>Cabecera h2</h2>
-    <h3>Cabecera h3PRUEBA</h3>
+    <h3>PRUEBA</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio voluptas natus, aliquam eius facilis temporibus nulla corrupti at a, saepe unde cupiditate quos. Voluptates incidunt magni suscipit laudantium ad delectus?</p>
 </body>
 </html>
